squashing bugs

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   }
 
   .nav-li {
-    @apply text-[#556962] hover:text-white font-generalsans max-sm:hover:bg-[#556962] max-sm:w-full max-sm:rounded-md py-2 max-sm:px-5;
+    @apply text-[#556962] hover:text-white font-bold font-generalsans max-sm:hover:bg-[#556962] max-sm:w-full max-sm:rounded-md py-2 max-sm:px-5;
   }
 
   .nav-li_a {
